@@ -4,6 +4,7 @@ package de.caritas.cob.agencyservice.api.service;
 import static java.util.Objects.nonNull;
 import static org.apache.commons.lang3.BooleanUtils.isTrue;
 
+import com.google.common.collect.Lists;
 import de.caritas.cob.agencyservice.api.admin.service.agency.DemographicsConverter;
 import de.caritas.cob.agencyservice.api.exception.MissingConsultingTypeException;
 import de.caritas.cob.agencyservice.api.exception.httpresponses.BadRequestException;
@@ -15,15 +16,16 @@ import de.caritas.cob.agencyservice.api.model.DemographicsDTO;
 import de.caritas.cob.agencyservice.api.model.FullAgencyResponseDTO;
 import de.caritas.cob.agencyservice.api.repository.agency.Agency;
 import de.caritas.cob.agencyservice.api.repository.agency.AgencyRepository;
+import de.caritas.cob.agencyservice.api.repository.agencytopic.AgencyTopic;
 import de.caritas.cob.agencyservice.api.tenant.TenantContext;
 import de.caritas.cob.agencyservice.consultingtypeservice.generated.web.model.ExtendedConsultingTypeResponseDTO;
 import de.caritas.cob.agencyservice.tenantservice.generated.web.model.RestrictedTenantDTO;
+import de.caritas.cob.agencyservice.tenantservice.generated.web.model.Settings;
 import java.time.LocalDateTime;
 import java.time.ZoneOffset;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import lombok.NonNull;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -32,6 +34,7 @@ import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.dao.DataAccessException;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 /**
  * Service for agencies.
@@ -51,6 +54,10 @@ public class AgencyService {
   private final @NonNull TenantService tenantService;
   private final @NonNull DemographicsConverter demographicsConverter;
 
+  private final @NonNull CentralDataProtectionTemplateService centralDataProtectionTemplateService;
+
+  private final @NonNull ApplicationSettingsService applicationSettingsService;
+
   @Value("${feature.topics.enabled}")
   private boolean topicsFeatureEnabled;
 
@@ -69,10 +76,11 @@ public class AgencyService {
    * @param agencyIds the ids of requested agencies
    * @return a list containing regarding agencies
    */
+  @Transactional
   public List<AgencyResponseDTO> getAgencies(List<Long> agencyIds) {
     return getAgencyRepositoryForSearch().findByIdIn(agencyIds).stream()
         .map(this::convertToAgencyResponseDTO)
-        .collect(Collectors.toList());
+        .toList();
   }
 
 
@@ -88,18 +96,18 @@ public class AgencyService {
 
       return agencyRepository.findByConsultingTypeId(consultingTypeId).stream()
           .map(this::convertToAgencyResponseDTO)
-          .collect(Collectors.toList());
+          .toList();
 
     } catch (MissingConsultingTypeException ex) {
       throw new BadRequestException(
-          String.format("Consulting type with id %s does not exist", consultingTypeId));
+          "Consulting type with id %s does not exist".formatted(consultingTypeId));
     }
   }
 
 
-  public List<FullAgencyResponseDTO> getAgencies(String postCode, int consultingTypeId,
+  public List<FullAgencyResponseDTO> getAgencies(Optional<String> postCode, int consultingTypeId,
       Optional<Integer> topicId) {
-    return getAgencies(postCode, consultingTypeId, topicId, Optional.empty(), Optional.empty());
+    return getAgencies(postCode, consultingTypeId, topicId, Optional.empty(), Optional.empty(), Optional.empty());
   }
 
   /**
@@ -110,38 +118,42 @@ public class AgencyService {
    * @param consultingTypeId the consulting type used for filtering agencies
    * @return a list containing regarding agencies
    */
-  public List<FullAgencyResponseDTO> getAgencies(String postCode, int consultingTypeId,
+  public List<FullAgencyResponseDTO> getAgencies(Optional<String> postCode,
+      Integer consultingTypeId,
       Optional<Integer> topicId,
-      Optional<Integer> age, Optional<String> gender) {
+      Optional<Integer> age, Optional<String> gender, Optional<String> counsellingRelation) {
 
     var consultingTypeSettings = retrieveConsultingTypeSettings(
         consultingTypeId);
-
-    if (doesPostCodeNotMatchMinSize(postCode, consultingTypeSettings)) {
+    if (postCode.isPresent() && doesPostCodeNotMatchMinSize(postCode.get(),
+        consultingTypeSettings)) {
       return Collections.emptyList();
     }
 
+
     var agencies = findAgencies(postCode, getConsultingTypeIdForSearch(consultingTypeId), topicId,
-        age, gender);
+        age, gender, counsellingRelation);
     Collections.shuffle(agencies);
     var agencyResponseDTOs = agencies.stream()
         .map(this::convertToFullAgencyResponseDTO)
-        .collect(Collectors.toList());
+        .toList();
+
+    var mutableResponseDTO = Lists.newArrayList(agencyResponseDTOs);
 
     if (agencyResponseDTOs.isEmpty()) {
-      addWhiteSpotAgency(consultingTypeSettings, agencyResponseDTOs);
+      addWhiteSpotAgency(consultingTypeSettings, mutableResponseDTO);
     }
 
-    return agencyResponseDTOs;
+    return mutableResponseDTO;
   }
 
   private Optional<Integer> getConsultingTypeIdForSearch(int consultingTypeId) {
     return multitenancyWithSingleDomain ? Optional.empty() : Optional.of(consultingTypeId);
   }
 
-  private List<Agency> findAgencies(String postCode, Optional<Integer> consultingTypeId,
+  private List<Agency> findAgencies(Optional<String> postCode, Optional<Integer> consultingTypeId,
       Optional<Integer> optionalTopicId, Optional<Integer> age,
-      Optional<String> gender) {
+      Optional<String> gender, Optional<String> counsellingRelation) {
 
     AgencySearch agencySearch = AgencySearch.builder()
         .postCode(postCode)
@@ -149,6 +161,7 @@ public class AgencyService {
         .topicId(optionalTopicId)
         .age(age)
         .gender(gender)
+        .counsellingRelation(counsellingRelation)
         .build();
 
     if (demographicsFeatureEnabled) {
@@ -166,10 +179,11 @@ public class AgencyService {
   private List<Agency> findAgencies(AgencySearch agencySearch) {
     try {
       return getAgencyRepositoryForSearch()
-          .searchWithoutTopic(agencySearch.getPostCode(),
-              agencySearch.getPostCode().length(), agencySearch.getConsultingTypeId().orElse(null),
+          .searchWithoutTopic(agencySearch.getPostCode().orElse(null),
+              agencySearch.getPostCode().orElse("").length(), agencySearch.getConsultingTypeId().orElse(null),
               agencySearch.getAge().orElse(null),
               agencySearch.getGender().orElse(null),
+              agencySearch.getCounsellingRelation().orElse(null),
               TenantContext.getCurrentTenant());
     } catch (DataAccessException ex) {
       throw new InternalServerErrorException(LogService::logDatabaseError,
@@ -178,7 +192,7 @@ public class AgencyService {
   }
 
   private void assertTopicIdIsProvided(Optional<Integer> topicId) {
-    if (!topicId.isPresent()) {
+    if (topicId.isEmpty()) {
       throw new BadRequestException("Topic id not provided in the search");
     }
   }
@@ -228,10 +242,11 @@ public class AgencyService {
   private List<Agency> findAgenciesWithTopic(AgencySearch agencySearch) {
     try {
       return getAgencyRepositoryForSearch()
-          .searchWithTopic(agencySearch.getPostCode(), agencySearch.getPostCode().length(),
+          .searchWithTopic(agencySearch.getPostCode().orElse(null), agencySearch.getPostCode().orElse("").length(),
               agencySearch.getConsultingTypeId().orElse(null),
               agencySearch.getTopicId().orElseThrow(),
               agencySearch.getAge().orElse(null), agencySearch.getGender().orElse(null),
+              agencySearch.getCounsellingRelation().orElse(null),
               TenantContext.getCurrentTenant());
 
     } catch (DataAccessException ex) {
@@ -248,10 +263,10 @@ public class AgencyService {
   }
 
   private void assertAgeAndGenderAreProvided(Optional<Integer> age, Optional<String> gender) {
-    if (!age.isPresent()) {
+    if (age.isEmpty()) {
       throw new BadRequestException("Age not provided in the search");
     }
-    if (!gender.isPresent()) {
+    if (gender.isEmpty()) {
       throw new BadRequestException("Age not provided in the search");
     }
   }
@@ -273,7 +288,20 @@ public class AgencyService {
     }
   }
 
+  private RestrictedTenantDTO getTenantDataRelevantForFeatureToggles(Agency agency) {
+    if (multitenancyWithSingleDomain) {
+      String mainTenantSubdomain = applicationSettingsService.getApplicationSettings()
+          .getMainTenantSubdomainForSingleDomainMultitenancy().getValue();
+      return tenantService.getRestrictedTenantDataBySubdomain(mainTenantSubdomain);
+    } else {
+
+      return agency.getTenantId() != null ? tenantService.getRestrictedTenantDataByTenantId(
+          agency.getTenantId()) : null;
+    }
+  }
+
   private AgencyResponseDTO convertToAgencyResponseDTO(Agency agency) {
+    String renderedAgencySpecificPrivacy = getRenderedAgencySpecificPrivacy(agency);
     return new AgencyResponseDTO()
         .id(agency.getId())
         .name(agency.getName())
@@ -283,7 +311,26 @@ public class AgencyService {
         .teamAgency(agency.isTeamAgency())
         .offline(agency.isOffline())
         .tenantId(agency.getTenantId())
-        .consultingType(agency.getConsultingTypeId());
+        .consultingType(agency.getConsultingTypeId())
+        .agencySpecificPrivacy(renderedAgencySpecificPrivacy)
+        .topicIds(getAgencyTopics(agency).stream().map(AgencyTopic::getTopicId).toList())
+        .agencyLogo(agency.getAgencyLogo());
+  }
+
+  private static List<AgencyTopic> getAgencyTopics(Agency agency) {
+    return agency.getAgencyTopics() == null ? Lists.newArrayList() : agency.getAgencyTopics();
+  }
+
+  protected String getRenderedAgencySpecificPrivacy(Agency agency) {
+    RestrictedTenantDTO tenantDataHoldingFeatureToggles = getTenantDataRelevantForFeatureToggles(
+        agency);
+    Settings settings = tenantDataHoldingFeatureToggles != null ? tenantDataHoldingFeatureToggles.getSettings() : null;
+    if (settings != null && settings.getFeatureCentralDataProtectionTemplateEnabled() != null && Boolean.TRUE.equals(settings.getFeatureCentralDataProtectionTemplateEnabled())) {
+      return centralDataProtectionTemplateService.renderPrivacyTemplateWithRenderedPlaceholderValues(
+          agency);
+    } else {
+      return null;
+    }
   }
 
 
@@ -300,7 +347,10 @@ public class AgencyService {
         .url(agency.getUrl())
         .external(agency.isExternal())
         .demographics(getDemographics(agency))
-        .tenantId(agency.getTenantId());
+        .tenantId(agency.getTenantId())
+        .topicIds(getAgencyTopics(agency).stream().map(AgencyTopic::getTopicId).toList())
+        .agencyLogo(agency.getAgencyLogo());
+
   }
 
   private DemographicsDTO getDemographics(Agency agency) {
