@@ -4,8 +4,8 @@ import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.endsWith;
 import static org.hamcrest.Matchers.is;
 import static org.hamcrest.Matchers.notNullValue;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import com.google.common.collect.Lists;
 import de.caritas.cob.agencyservice.api.model.AgencyAdminFullResponseDTO;
@@ -14,6 +14,8 @@ import de.caritas.cob.agencyservice.api.model.DemographicsDTO;
 import de.caritas.cob.agencyservice.api.model.UpdateAgencyDTO;
 import de.caritas.cob.agencyservice.api.repository.agency.Agency;
 import de.caritas.cob.agencyservice.api.repository.agency.AgencyRepository;
+import de.caritas.cob.agencyservice.api.tenant.TenantContext;
+import jakarta.persistence.EntityManager;
 import java.util.Optional;
 import org.springframework.beans.factory.annotation.Autowired;
 
@@ -25,15 +27,13 @@ public class AgencyAdminServiceITBase {
   public void saveAgency_Should_PersistsAgency() {
 
     AgencyDTO agencyDTO = createAgencyDTO();
-
+    agencyDTO.setTenantId(1L);
     AgencyAdminFullResponseDTO agencyAdminFullResponseDTO = agencyAdminService.createAgency(agencyDTO);
-
     Optional<Agency> agencyOptional =
         agencyRepository.findById(agencyAdminFullResponseDTO.getEmbedded().getId());
     Agency agency = agencyOptional.get();
     assertTrue(agency.isTeamAgency());
     assertThat(0, is(agency.getConsultingTypeId()));
-    assertEquals(0L, agency.getDioceseId().longValue());
     assertEquals("12345", agency.getPostCode());
     assertEquals("Agency description", agency.getDescription());
     assertEquals("Agency name", agency.getName());
@@ -61,26 +61,22 @@ public class AgencyAdminServiceITBase {
     assertThat(
         agencyAdminFullResponseDTO.getLinks().getDelete().getHref(),
         endsWith(
-            String.format(
-                "/${openapi.willBeReplaced.base-path}/agencyadmin/agencies/%s", agencyAdminFullResponseDTO.getEmbedded().getId())));
+            "/agencyadmin/agencies/%s".formatted(agencyAdminFullResponseDTO.getEmbedded().getId())));
     assertThat(agencyAdminFullResponseDTO.getLinks().getSelf(), notNullValue());
     assertThat(
         agencyAdminFullResponseDTO.getLinks().getSelf().getHref(),
         endsWith(
-            String.format(
-                "/${openapi.willBeReplaced.base-path}/agencyadmin/agencies/%s", agencyAdminFullResponseDTO.getEmbedded().getId())));
+            "/agencyadmin/agencies/%s".formatted(agencyAdminFullResponseDTO.getEmbedded().getId())));
     assertThat(agencyAdminFullResponseDTO.getLinks().getUpdate(), notNullValue());
     assertThat(
         agencyAdminFullResponseDTO.getLinks().getUpdate().getHref(),
         endsWith(
-            String.format(
-                "/${openapi.willBeReplaced.base-path}/agencyadmin/agencies/%s", agencyAdminFullResponseDTO.getEmbedded().getId())));
+            "/agencyadmin/agencies/%s".formatted(agencyAdminFullResponseDTO.getEmbedded().getId())));
     assertThat(agencyAdminFullResponseDTO.getLinks().getPostcodeRanges(), notNullValue());
     assertThat(
         agencyAdminFullResponseDTO.getLinks().getPostcodeRanges().getHref(),
         endsWith(
-            String.format(
-                "/${openapi.willBeReplaced.base-path}/agencyadmin/postcoderanges/%s", agencyAdminFullResponseDTO.getEmbedded().getId())));
+            "/agencyadmin/postcoderanges/%s".formatted(agencyAdminFullResponseDTO.getEmbedded().getId())));
   }
 
   protected AgencyDTO createAgencyDTO() {
@@ -88,7 +84,6 @@ public class AgencyAdminServiceITBase {
     AgencyDTO agencyDTO = new AgencyDTO();
     agencyDTO.setTeamAgency(true);
     agencyDTO.setConsultingType(0);
-    agencyDTO.setDioceseId(0L);
     agencyDTO.setPostcode("12345");
     agencyDTO.setDescription("Agency description");
     agencyDTO.setName("Agency name");
@@ -111,7 +106,6 @@ public class AgencyAdminServiceITBase {
     Optional<Agency> agencyOptional =
         agencyRepository.findById(agencyAdminFullResponseDTO.getEmbedded().getId());
     Agency agency = agencyOptional.orElseThrow(RuntimeException::new);
-    assertEquals(updateAgencyDTO.getDioceseId(), agency.getDioceseId());
     assertEquals(updateAgencyDTO.getPostcode(), agency.getPostCode());
     assertEquals(updateAgencyDTO.getDescription(), agency.getDescription());
     assertEquals(updateAgencyDTO.getName(), agency.getName());
@@ -124,7 +118,6 @@ public class AgencyAdminServiceITBase {
     Optional<Agency> agencyOptional = agencyRepository.findById(0L);
     Agency agency = agencyOptional.orElseThrow(RuntimeException::new);
     UpdateAgencyDTO updateAgencyDTO = new UpdateAgencyDTO();
-    updateAgencyDTO.dioceseId(agency.getDioceseId() + 1);
     updateAgencyDTO.name(agency.getName() + "x");
     updateAgencyDTO.description(agency.getDescription() + "x");
     updateAgencyDTO.postcode("00000");
@@ -145,26 +138,22 @@ public class AgencyAdminServiceITBase {
     assertThat(
         agencyAdminFullResponseDTO.getLinks().getDelete().getHref(),
         endsWith(
-            String.format(
-                "/${openapi.willBeReplaced.base-path}/agencyadmin/agencies/%s", agencyAdminFullResponseDTO.getEmbedded().getId())));
+            "/agencyadmin/agencies/%s".formatted(agencyAdminFullResponseDTO.getEmbedded().getId())));
     assertThat(agencyAdminFullResponseDTO.getLinks().getSelf(), notNullValue());
     assertThat(
         agencyAdminFullResponseDTO.getLinks().getSelf().getHref(),
         endsWith(
-            String.format(
-                "/${openapi.willBeReplaced.base-path}/agencyadmin/agencies/%s", agencyAdminFullResponseDTO.getEmbedded().getId())));
+            "/agencyadmin/agencies/%s".formatted(agencyAdminFullResponseDTO.getEmbedded().getId())));
     assertThat(agencyAdminFullResponseDTO.getLinks().getUpdate(), notNullValue());
     assertThat(
         agencyAdminFullResponseDTO.getLinks().getUpdate().getHref(),
         endsWith(
-            String.format(
-                "/${openapi.willBeReplaced.base-path}/agencyadmin/agencies/%s", agencyAdminFullResponseDTO.getEmbedded().getId())));
+            "/agencyadmin/agencies/%s".formatted(agencyAdminFullResponseDTO.getEmbedded().getId())));
     assertThat(agencyAdminFullResponseDTO.getLinks().getPostcodeRanges(), notNullValue());
     assertThat(
         agencyAdminFullResponseDTO.getLinks().getPostcodeRanges().getHref(),
         endsWith(
-            String.format(
-                "/${openapi.willBeReplaced.base-path}/agencyadmin/postcoderanges/%s", agencyAdminFullResponseDTO.getEmbedded().getId())));
+            "/agencyadmin/postcoderanges/%s".formatted(agencyAdminFullResponseDTO.getEmbedded().getId())));
   }
 
   public void getAgency_Should_returnExpectedAgency_When_agencyWithIdExists() {
@@ -178,7 +167,6 @@ public class AgencyAdminServiceITBase {
     assertThat(result.getEmbedded().getDescription(), notNullValue());
     assertThat(result.getEmbedded().getConsultingType(), notNullValue());
     assertThat(result.getEmbedded().getName(), notNullValue());
-    assertThat(result.getEmbedded().getDioceseId(), notNullValue());
   }
 
 }
